# FFmpegPlay

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/matt/ffmpegplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/matt/ffmpegplay/: CameraGlSurfaceActivity.kt  EGLPlayerActivity.kt  EtcAniActivity.kt  FBOActivity.kt  FFmpegPlayerActivity.kt  ImageGlSurfaceActivity.kt  MainActivity.kt  MediaCodecPlayerActivity.kt  NativeOpenglActivity.kt  Obj3DActivity.kt  OpenglActivity.kt  SimpleGLSurfaceActivity.kt
app/src/main/java/com/matt/ffmpegplay/utils/: CommonUtils.java  PermissionsHelper.kt
app/src/main/res/layout/: activity_camera_gl_surface.xml  activity_eglplayer.xml  activity_etc_ani.xml  activity_gl_surface.xml  activity_main.xml  activity_native_opengl.xml  activity_obj_3d.xml  activity_opengl.xml  activity_player.xml
app/src/main/res/menu/: menu_camera.xml  menu_native.xml  menu_simple.xml
app/src/test/java/com/matt/ffmpegplay/: ExampleUnitTest.kt
ffmpeglib/: build.gradle
ffmpeglib/src/androidTest/java/com/matt/ffmpeglib/: ExampleInstrumentedTest.kt
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ffmpeglib/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  codec.h  dirac.h  vdpau.h
ffmpeglib/src/main/cpp/ffmpeg/include/libavutil/: common.h
ffmpeglib/src/main/cpp/glm/: ext.hpp
ffmpeglib/src/main/cpp/glm/detail/: setup.hpp
ffmpeglib/src/main/cpp/glm/gtc/: matrix_transform.hpp
ffmpeglib/src/main/cpp/glm/gtx/: simd_quat.hpp
ffmpeglib/src/main/cpp/media/: one_frame.h  pcm_data.h
ffmpeglib/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  decoder.h
ffmpeglib/src/main/cpp/media/decoder/audio/: audio_decoder.cpp  audio_decoder.h
ffmpeglib/src/main/cpp/media/decoder/video/: video_decoder.cpp  video_decoder.h
ffmpeglib/src/main/cpp/media/encoder/: base_encoder.cpp  base_encoder.h  encoder.h  encoder_state.h
ffmpeglib/src/main/cpp/media/encoder/audio/: audio_encoder.cpp  audio_encoder.h
ffmpeglib/src/main/cpp/media/encoder/video/: video_encoder.cpp  video_encoder.h
ffmpeglib/src/main/cpp/media/muxer/: ff_repack.cpp  ff_repack.h  mp4_muxer.cpp  mp4_muxer.h  muxer.h
ffmpeglib/src/main/cpp/media/player/: player.cpp  player.h
ffmpeglib/src/main/cpp/media/render/audio/: audio_render.h  opensl_render.cpp  opensl_render.h
ffmpeglib/src/main/cpp/media/render/video/: native_render.cpp  native_render.h  opengl_pixel_receiver.h  opengl_render.cpp  opengl_render.h  video_render.h
ffmpeglib/src/main/cpp/media/synthesizer/: synthesizer.cpp  synthesizer.h
ffmpeglib/src/main/cpp/opengl/: CMakeLists.txt  EglRender.cpp  EglRender.h  OpenglHandler.cpp  OpenglHandler.h
ffmpeglib/src/main/cpp/opengl/detail/: dummy.cpp  func_common.hpp  type_gentype.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
ffmpeglib/src/main/cpp/opengl/drawer/: NV21TextureDrawer.cpp  NV21TextureDrawer.h  TextureDrawer.cpp  TextureDrawer.h  TriangleDrawer.cpp  TriangleDrawer.h  VideoDrawer.cpp  VideoDrawer.h  drawer.cpp  drawer.h
ffmpeglib/src/main/cpp/opengl/drawer/proxy/: DrawerProxy.h  DrawerProxyImpl.cpp  DrawerProxyImpl.h
ffmpeglib/src/main/cpp/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp
ffmpeglib/src/main/cpp/opengl/gtc/: type_ptr.hpp
ffmpeglib/src/main/cpp/opengl/gtx/: simd_mat4.hpp
ffmpeglib/src/main/cpp/utils/: ImageData.h  LogUtil.h  ShaderUtils.h  TextureUtils.h  timer.c
ffmpeglib/src/main/java/com/matt/ffmpeglib/: FFmpegPlay.kt  NativeRender.kt
ffmpeglib/src/main/java/com/matt/ffmpeglib/drawer/: CameraDrawer.kt  FBODrawer.kt  IDrawer.kt  ImageDrawer.kt  IndicesCubeDrawer.kt  RectangleDrawer.kt  TextureDrawer.kt  TriangleDrawer.kt
ffmpeglib/src/main/java/com/matt/ffmpeglib/egl/: CustomerGLRenderer.kt  EGLCore.kt  EGLSurfaceHolder.kt
ffmpeglib/src/main/java/com/matt/ffmpeglib/etc/: EtcAniView.kt  EtcDrawer.kt  ZipPkmLoader.kt
ffmpeglib/src/main/java/com/matt/ffmpeglib/media/: ANativePlayer.kt  MP4Repack.kt
ffmpeglib/src/main/java/com/matt/ffmpeglib/media/decoder/: AudioDecoder.kt  BaseDecoder.kt  DecodeState.kt  Frame.kt  IDecoderStateListener.kt  VideoDecoder.kt
ffmpeglib/src/main/java/com/matt/ffmpeglib/media/encoder/: AudioEncoder.kt  BaseEncoder.kt  (+3 more)
ffmpeglib/src/main/java/com/matt/ffmpeglib/render/: SimpleRender.kt
ffmpeglib/src/main/java/com/matt/ffmpeglib/utils/: MatrixUtils.kt  ResReadUtils.kt  ShaderUtils.kt  TextureUtils.kt
ffmpeglib/src/main/res/raw/: image_vertex_shader.vert  obj_vertex_shader.vert
ffmpeglib/src/test/java/com/matt/ffmpeglib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opengllib/: build.gradle
opengllib/src/androidTest/java/com/matt/opengllib/: ExampleInstrumentedTest.kt
opengllib/src/main/: AndroidManifest.xml
opengllib/src/main/cpp/: CMakeLists.txt  opengl-lib.cpp
opengllib/src/main/cpp/drawer/: IDrawer.h  TextureDrawer.cpp  TextureDrawer.h  TriangleDrawer.cpp  TriangleDrawer.h
opengllib/src/main/cpp/render/: SimpleRender.cpp  SimpleRender.h
opengllib/src/main/cpp/utils/: ImageData.h  LogUtil.h  ShaderUtils.h  TextureUtils.h
opengllib/src/main/java/com/matt/opengllib/drawer/: CameraDrawer.kt  FBODrawer.kt  IDrawer.kt  ImageDrawer.kt  IndicesCubeDrawer.kt  RectangleDrawer.kt  TextureDrawer.kt  TriangleDrawer.kt
opengllib/src/main/java/com/matt/opengllib/egl/: CustomerGLRenderer.kt  EGLCore.kt  EGLSurfaceHolder.kt
opengllib/src/main/java/com/matt/opengllib/etc/: EtcAniView.kt  EtcDrawer.kt  ZipPkmLoader.kt
opengllib/src/main/java/com/matt/opengllib/render/: MyGLRender.kt  MyGLSurfaceView.kt  NativeRender.kt  SimpleRender.kt
opengllib/src/main/java/com/matt/opengllib/utils/: MatrixUtils.kt  ResReadUtils.kt  ShaderUtils.kt  TextureUtils.kt
opengllib/src/main/res/raw/: camera_fragment_shader.frag  etc_fragment_shader.frag  etc_vertex_shader.vert  image_fragment_shader.frag  obj_fragment_shader.frag  texture_fragment_shader.frag  texture_vertex_shader.vert
opengllib/src/test/java/com/matt/opengllib/: ExampleUnitTest.kt
(+4 files in other folders)
